# libppd

./: .gitignore  CHANGES.md  CONTRIBUTING.md  COPYING  DEVELOPING.md  INSTALL  INSTALL.md  Makefile.am  NOTICE  README.md  autogen.sh  configure.ac  libppd.pc.in  testppdfile
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql-analysis.yml
ci/: ci-setup.sh
ci/autopkgtest/: run.sh
ci/autopkgtest/debian-tests/: control  libppd-2-dev  libppd-2-ppd-handling
ppd/: README.md  array-private.h  array.c  debug.c  file.c  imagetops-pstops.c  language.c  libcups2-private.h  libcups2.c  pdftops.c  ppd-attr.c  ppd-cache.c  ppd-collection.cxx  ppd-conflicts.c  ppd-custom.c  ppd-emit.c  ppd-filter.c  ppd-generator.c  ppd-ipp.c  ppd-load-profile.c  ppd-localize.c  ppd-mark.c  ppd-test.c  ppd.c  ppd.h  ppdc-catalog.cxx  ppdc-constraint.cxx  ppdc-driver.cxx  ppdc-file.cxx  ppdc-source.cxx  ppdc.cxx  ppdc.h  ppdhtml.cxx  ppdi.cxx  ppdmerge.cxx  ppdpo.cxx  raster-interpret.c  rastertops.c  sbo_test.ppd  snprintf.c  (+16 more)
